fix responsive layout issue for mobile screens

--- a/src/components/Preview.module.css
+++ b/src/components/Preview.module.css
@@ -13,10 +13,17 @@
   padding: var(--padding-default);
   display: flex;
   flex-direction: column;
-  align-items: center;
   border-radius: var(--border-radius-default);
   background: var(--background-color-preview);
   border-radius: var(--border-radius-default) var(--border-radius-default) 0 0;
+  max-width: calc(100vw - 8rem);
+  overflow: auto;
+}
+
+.display h2 {
+  position: sticky;
+  left: 0;
+  top: 0;
 }
 
 .displayOutput {
